# Scientific-Personalization

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: config.yaml.example
configs/: accelerate_config.yaml  default.yaml
notebooks/: clean.ipynb  eval.ipynb  evaluation.ipynb  neo4j.ipynb  plot.ipynb
personas/: personas_all.json
prompt_templates/data_generation/: persona_template.j2  persona_template_2.j2
prompt_templates/eval_3/: groundedness_system.j2  groundedness_user.j2  persona_adherence_system.j2  persona_adherence_user.j2  relevancy_system.j2  relevancy_user.j2
prompt_templates/evaluation/: judge.j2
prompt_templates/simulation/: rationale_system.j2  rationale_user.j2
scripts/: eval_baseline.py  train_baseline.py
scripts/dataset_generation/: classify_articles.py  extract_concepts_from_prompts.py  generate_hypotheses_from_context.py  generate_hypotheses_from_subqueries_weaviate_hybrid.py  generate_prompts.py  retrieval.py  sample_neo4j_nodes.py
scripts/taxonomy/: README.md  filter_taxonomy_phase2.py  generate_taxonomy_phase1.py  (+2 more)
scripts_2/: build_neighbourhood_dataset.py  compute_cl_metrics_exp4.py  evaluate_hypotheses.py  generate_full.py  generate_hypotheses_neighbourhood.py  generate_prompts_neighbourhood.py  judge_from_csv.py  metrics_from_csv.py  simulate_user_rationale.py  stratify_dpo_dataset.py
server_scripts/: classify_articles.sh  eval_baseline.sh  extract_concepts_from_prompts.sh  generate_hypotheses_from_context.sh  generate_hypotheses_from_subqueries_weaviate.sh  generate_prompts.sh  retrieval.sh  train_baseline.sh
(+41 files in other folders)
